--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ li span {
     margin: .25em 0;
     padding: 0 1em;
     text-align: center;
-    border-left: 1px solid #333;
+    border-left: 1px solid #ffd54f;
 }
 
 .emoji {
