--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .container {
-  color: #ffd54f;
+  color: #ffc425;
   margin: 0 auto;
   text-align: center;
   overflow: hidden;
@@ -73,7 +73,7 @@ li span {
     margin: .25em 0;
     padding: 0 1em;
     text-align: center;
-    border-left: 1px solid #ffd54f;
+    border-left: 1px solid #ffc425;
 }
 
 .emoji {
